fixed dl block css for dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,25 +28,21 @@
 /* https://github.com/zestedesavoir/zmarkdown/tree/master/packages/remark-custom-blocks */
 .remark-custom-blocks__dl {
   margin: 2.4rem 0 1.6rem;
-  padding: 0 0.6rem 0;
+  padding: 0.3rem 0.8rem 0;
   border: solid 1px #444;
   box-shadow: 0px 3px 0px rgba(1, 1, 1, 0.1);
 }
 
 .remark-custom-blocks__dl .custom-block-heading {
-  position: relative;
   display: inline-block;
-  background: #fff;
-  padding: 0 0.2rem 0;
+  margin: 0 0 1rem;
+  border-bottom: 1px solid #777;
+  padding: 0.3rem 0.2rem 0.4rem;
   font-weight: bold;
   font-size: 1.2rem;
-  top: -1rem;
-  height: 1.4rem;
 }
 
 .remark-custom-blocks__dl .custom-block-body {
-  position: relative;
-  top: 0;
   margin: 0;
 }
 
